added features to preprocessing class

--- a/full_knn_method.ipynb
+++ b/full_knn_method.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PreprocessData:\n",
+    "    ''' Load all data contained in the directory as X and Y.\n",
+    "        Labels are stored in labels\n",
+    "    '''\n",
     "    def __init__(self, directory):\n",
     "        self.X = []\n",
     "        self.Y = []\n",
@@ -64,6 +67,10 @@
     "            self.X.append(folder_list)\n",
     "            self.Y.append([id] * len(folder_list))\n",
     "\n",
+    "    ''' Smoothen and discretize the data to length 50.\n",
+    "        If method = gaussian then perform a gaussian smoothing\n",
+    "        If method = moving average then compute the moving average\n",
+    "    '''\n",
     "    def smoothen_discretize(self, smoothing_method='gaussian'):\n",
     "        if smoothing_method == 'gaussian':\n",
     "            SIGMA = 2.5\n",
@@ -105,7 +112,11 @@
     "                    # convert to numpy\n",
     "                    self.X[class_num][id] = np.vstack([timeseries[col] for col in timeseries])[1:,:]\n",
     "\n",
-    "\n",
+    "    ''' Normalize the data.\n",
+    "        If method = standardized then divide by the precomputed standard deviation.\n",
+    "        If method = maxmin then perform max/min normalization between -1 and 1.\n",
+    "        If no method is passed then no normalization will be done.\n",
+    "    '''\n",
     "    def normalize(self, normalize_method='standardized'):\n",
     "        if normalize_method == 'maxmin':\n",
     "            # compute the max and min values per axis\n",
@@ -123,18 +134,27 @@
     "                for id, data in enumerate(self.X[class_num]):\n",
     "                    self.X[class_num][id] = ((data - mins) / ranges) * 2 - 1\n",
     "        elif normalize_method == 'standardized':\n",
-    "            print('here')\n",
     "            # precomputed standard deviations\n",
-    "            STD_DEVS = np.array([[1.7745429], [1.74329216], [0.88270117], [0.23984307], [0.28651667], [0.31243148]])\n",
+    "            STD_DEVS = np.array([[1.33343277], [1.59291318], [0.52805266], [0.07645243], [0.07536972], [0.22749133]])\n",
     "            for class_num in range(len(self.X)):\n",
     "                for id, data in enumerate(self.X[class_num]):\n",
     "                    self.X[class_num][id] = data / STD_DEVS\n",
     "\n",
-    "    def integrate(self):\n",
+    "    ''' Compute the cumulative sum of each time series.\n",
+    "        The axis field allows you to pass a list of which IMU fields you would like to integrate.\n",
+    "        0 = lr_acc, 1 = bf_acc, 2 = vert_acc, 3 = lr_gyro, 4 = bf_gyro, 5 = vert_gyro\n",
+    "        dt is the length of time for each sample in seconds\n",
+    "        N is the length of each time series sample\n",
+    "    '''\n",
+    "    def integrate(self, axes=[0,5], dt=8, N=50):\n",
     "        for class_num in range(len(self.X)):\n",
     "                for id, data in enumerate(self.X[class_num]):\n",
-    "                    self.X[class_num][id] = np.cumsum(data, axis=1)\n",
+    "                    for axis in axes:\n",
+    "                        self.X[class_num][id] = dt * np.cumsum(data) / N\n",
     "\n",
+    "    ''' Perform all of the preprocessing steps in a single function call.\n",
+    "        Pass in the arguments for the necessary preprocessing steps you wish to perform.\n",
+    "    '''\n",
     "    def preprocess(self, **kwargs):\n",
     "        # smoothen and discretize\n",
     "        if 'smoothing_method' in kwargs:\n",
@@ -143,27 +163,77 @@
     "        # normalize\n",
     "        if 'normalize_method' in kwargs:\n",
     "            self.normalize(kwargs['normalize_method'])\n",
-    "        else: self.normalize()"
+    "        else: self.normalize()\n",
+    "\n",
+    "    ''' Converts the data from each class to a timeseries object with a set number of samples.\n",
+    "        The axis field allows you to pass a list of which IMU fields you would like to include.\n",
+    "        0 = lr_acc, 1 = bf_acc, 2 = vert_acc, 3 = lr_gyro, 4 = bf_gyro, 5 = vert_gyro\n",
+    "    '''\n",
+    "    def to_timeseries(self, num_samples, axes=[0,5]):\n",
+    "        for class_num in range(len(self.X)):\n",
+    "            # shuffle data for each instance\n",
+    "            indices = list(range(len(self.X[class_num])))\n",
+    "            random.shuffle(indices)\n",
+    "            self.X[class_num] = to_time_series_dataset([self.X[class_num][i][axes,:].T for i in indices][:num_samples])\n",
+    "            self.Y[class_num] = self.Y[class_num][:num_samples]\n",
+    "\n",
+    "    ''' Cluster the data for each class into a set number of clusters.\n",
+    "    '''\n",
+    "    def cluster(self, num_clusters, cluster_method='dtw', **kwargs):\n",
+    "        for class_num in range(len(self.X)):\n",
+    "            km = TimeSeriesKMeans(num_clusters, metric=cluster_method, **kwargs)\n",
+    "            km.fit(self.X[class_num])\n",
+    "            self.X[class_num] = km.cluster_centers_\n",
+    "\n",
+    "    ''' Returns the timeseries data, X, and the corresponding labels, Y\n",
+    "        X: ndarray of shape (num_samples, len_time_series, num_dimensions)\n",
+    "        Y: ndarray of shape (num_samples) containing int values corresponding to the class\n",
+    "    '''\n",
+    "    def get_arrays(self):\n",
+    "        X_ts = np.concatenate(self.X, axis=0)\n",
+    "        Y_ts = np.concatenate(self.Y)\n",
+    "        return X_ts, Y_ts\n",
+    "\n",
+    "    ''' Produces a KNN model that can be used to predict maneuvers.\n",
+    "    '''\n",
+    "    def produce_knn(self, k=1, distance_metric='dtw', **kwargs):\n",
+    "        knn_clf = KNeighborsTimeSeriesClassifier(n_neighbors=k, metric=distance_metric, **kwargs)\n",
+    "        knn_clf.fit(self.X, self.Y)\n",
+    "        return knn_clf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TrainingData = PreprocessData(training_directory)\n",
     "TrainingData.smoothen_discretize('gaussian')\n",
-    "TrainingData.normalize('standardized')\n",
-    "# TrainingData.preprocess()"
+    "# TrainingData.normalize('standardized')\n",
+    "# TrainingData.preprocess()\n",
+    "TrainingData.to_timeseries(100)\n",
+    "X, Y = TrainingData.produce_knn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(600, 50, 2)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
    ]
   },
   {
